--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: #fff;
+    z-index: 100;
   }
 
 .dropdown-menu {
