--- a/src/Components/ReviewsPage/ReviewsPage.css
+++ b/src/Components/ReviewsPage/ReviewsPage.css
@@ -5,7 +5,7 @@
 
 .reviews-table {
     table-layout: fixed;
-    width: 100%;
+    max-width: 1000px;
     margin-top: 200px;
     border-collapse: collapse;
 }
